src/parser/parser.output
Terminals unused in grammar

    TK_CHOCO
    TK_STRING
    TK_BOOL
    TK_PARAM
    TK_ASSIGN
    TK_BEGIN
    TK_FROM
    TK_TO
    TK_UNION
    TK_INTERSEC


Grammar

    0 $accept: program $end

    1 $@1: ε

    2 program: $@1 decl_opt_cst decl_opt_fncs system_or_func

    3 $@2: ε

    4 program: $@2 choco_ctr

    5 system_or_func: TK_VARS decl_var_list ';' decl_opt_fncs decl_opt_goal decl_opt_ctrs
    6               | ε

    7 choco_ctr: ctr_blk_list

    8 decl_opt_cst: ε
    9             | TK_CONST
   10             | TK_CONST decl_cst_list ';'

   11 decl_cst_list: decl_cst
   12              | decl_cst_list ';' decl_cst

   13 decl_cst: TK_NEW_SYMBOL dimension equ_or_in expr
   14         | '*' TK_NEW_SYMBOL dimension equ_or_in expr

   15 decl_var_integer: TK_INT
   16                 | TK_INTEGER

   17 equ_or_in: TK_EQU
   18          | TK_IN

   19 decl_var_list: decl_var
   20              | decl_var_list ';' decl_var
   21              | decl_var_list ',' decl_var

   22 decl_var: TK_NEW_SYMBOL dimension
   23         | TK_NEW_SYMBOL dimension TK_IN expr
   24         | TK_NEW_SYMBOL dimension decl_var_integer TK_IN expr

   25 dimension: ε
   26          | '[' expr ']'
   27          | '[' expr ']' '[' expr ']'

   28 interval: '[' expr ',' expr ']'

   29 decl_opt_fncs: decl_opt_fncs function
   30              | ε

   31 $@3: ε

   32 function: TK_FUNCTION $@3 TK_NEW_SYMBOL '(' fnc_inpt_list ')' fnc_code TK_RETURN expr semicolon_opt TK_END

   33 semicolon_opt: ';'
   34              | ε

   35 fnc_inpt_list: fnc_inpt_list ',' fnc_input
   36              | fnc_input

   37 fnc_input: TK_NEW_SYMBOL dimension

   38 fnc_code: fnc_code fnc_assign ';'
   39         | ε

   40 fnc_assign: TK_NEW_SYMBOL TK_EQU expr
   41           | TK_CONSTANT TK_EQU expr

   42 decl_opt_goal: ε
   43              | TK_MINIMIZE expr semicolon_opt

   44 decl_opt_ctrs: ε

   45 $@4: ε

   46 decl_opt_ctrs: TK_CTRS $@4 ctr_blk_list TK_END
   47              | TK_CTRS semicolon_opt TK_END

   48 ctr_blk_list: ctr_blk_list1 semicolon_opt
   49             | ctr_blk_list2 semicolon_opt

   50 ctr_blk_list1: ctr_blk_list1 ';' ctr
   51              | ctr_blk_list2 semicolon_opt ctr
   52              | ctr

   53 ctr_blk_list2: ctr_blk_list1 ';' ctr_loop
   54              | ctr_blk_list2 semicolon_opt ctr_loop
   55              | ctr_loop

   56 $@5: ε

   57 ctr_loop: TK_FOR TK_NEW_SYMBOL TK_EQU expr ':' expr ';' $@5 ctr_blk_list TK_END

   58 ctr: expr TK_EQU expr
   59    | expr TK_LEQ expr
   60    | expr TK_GEQ expr
   61    | expr '<' expr
   62    | expr '>' expr
   63    | expr TK_IN expr
   64    | TK_INTEGER '(' expr ')'
   65    | '(' ctr ')'
   66    | TK_NEW_SYMBOL TK_EQU expr

   67 expr: expr '+' expr
   68     | expr '*' expr
   69     | expr '-' expr
   70     | expr '/' expr
   71     | TK_MAX '(' expr_row ')'
   72     | TK_MIN '(' expr_row ')'

   73 $@6: ε

   74 expr: TK_SUM '(' TK_NEW_SYMBOL TK_EQU expr ':' expr ',' $@6 expr ')'
   75     | TK_ATAN2 '(' expr ',' expr ')'
   76     | '-' expr
   77     | TK_ABS '(' expr ')'
   78     | TK_SIGN '(' expr ')'
   79     | expr '\''
   80     | TK_SQRT '(' expr ')'
   81     | TK_SQR '(' expr ')'
   82     | TK_POW '(' expr ',' expr ')'
   83     | TK_EXPO '(' expr ')'
   84     | TK_LOG '(' expr ')'
   85     | TK_COS '(' expr ')'
   86     | TK_SIN '(' expr ')'
   87     | TK_TAN '(' expr ')'
   88     | TK_ACOS '(' expr ')'
   89     | TK_ASIN '(' expr ')'
   90     | TK_ATAN '(' expr ')'
   91     | TK_COSH '(' expr ')'
   92     | TK_SINH '(' expr ')'
   93     | TK_TANH '(' expr ')'
   94     | TK_ACOSH '(' expr ')'
   95     | TK_ASINH '(' expr ')'
   96     | TK_ATANH '(' expr ')'
   97     | TK_FLOOR '(' expr ')'
   98     | TK_CEIL '(' expr ')'
   99     | TK_CHI '(' expr ',' expr ',' expr ')'
  100     | '+' expr
  101     | '(' expr ')'
  102     | '<' expr ',' expr '>'
  103     | expr '^' expr
  104     | expr '[' expr_index ']'
  105     | expr '(' expr_index ')'
  106     | expr '(' expr_index ',' expr_index ')'
  107     | '(' expr_row ')'
  108     | '(' expr_col ')'
  109     | TK_ENTITY
  110     | TK_ITERATOR
  111     | TK_EXPR_TMP_SYMBOL
  112     | TK_CONSTANT
  113     | TK_FUNC_SYMBOL '(' expr ')'
  114     | TK_FUNC_SYMBOL '(' expr_row ')'
  115     | TK_FLOAT
  116     | TK_PI
  117     | TK_INFINITY
  118     | TK_INT_CST
  119     | interval
  120     | TK_INF '(' expr ')'
  121     | TK_MID '(' expr ')'
  122     | TK_SUP '(' expr ')'
  123     | TK_DIFF '(' expr_row ')'
  124     | TK_UNARY_OP '(' expr ')'
  125     | TK_BINARY_OP '(' expr ',' expr ')'

  126 expr_row: expr_row ',' expr
  127         | expr ',' expr

  128 expr_col: expr_col ';' expr
  129         | expr ';' expr

  130 expr_index: ':'
  131           | expr
  132           | expr ':' expr


Terminals, with rules where they appear

    $end (0) 0
    '\'' (39) 79
    '(' (40) 32 64 65 71 72 74 75 77 78 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 101 105 106 107 108 113 114 120 121 122 123 124 125
    ')' (41) 32 64 65 71 72 74 75 77 78 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 101 105 106 107 108 113 114 120 121 122 123 124 125
    '*' (42) 14 68
    '+' (43) 67 100
    ',' (44) 21 28 35 74 75 82 99 102 106 125 126 127
    '-' (45) 69 76
    '/' (47) 70
    ':' (58) 57 74 130 132
    ';' (59) 5 10 12 20 33 38 50 53 57 128 129
    '<' (60) 61 102
    '>' (62) 62 102
    '[' (91) 26 27 28 104
    ']' (93) 26 27 28 104
    '^' (94) 103
    error (256)
    TK_CHOCO (258)
    TK_CONSTANT <str> (259) 41 112
    TK_NEW_SYMBOL <str> (260) 13 14 22 23 24 32 37 40 57 66 74
    TK_FUNC_SYMBOL <str> (261) 113 114
    TK_EXPR_TMP_SYMBOL <str> (262) 111
    TK_ENTITY <str> (263) 109
    TK_ITERATOR <str> (264) 110
    TK_UNARY_OP <str> (265) 124
    TK_BINARY_OP <str> (266) 125
    TK_STRING <str> (267)
    TK_INT_CST <itg> (268) 118
    TK_FLOAT <real> (269) 115
    TK_PI (270) 116
    TK_INFINITY (271) 117
    TK_BOOL <_bool> (272)
    TK_PARAM (273)
    TK_CONST (274) 9 10
    TK_VARS (275) 5
    TK_FUNCTION (276) 32
    TK_DIFF (277) 123
    TK_MIN (278) 72
    TK_MAX (279) 71
    TK_INF (280) 120
    TK_MID (281) 121
    TK_SUP (282) 122
    TK_SIGN (283) 78
    TK_ABS (284) 77
    TK_SUM (285) 74
    TK_SQRT (286) 80
    TK_SQR (287) 81
    TK_POW (288) 82
    TK_EXPO (289) 83
    TK_LOG (290) 84
    TK_COS (291) 85
    TK_SIN (292) 86
    TK_TAN (293) 87
    TK_ACOS (294) 88
    TK_ASIN (295) 89
    TK_ATAN (296) 90
    TK_ATAN2 (297) 75
    TK_COSH (298) 91
    TK_SINH (299) 92
    TK_TANH (300) 93
    TK_ACOSH (301) 94
    TK_ASINH (302) 95
    TK_ATANH (303) 96
    TK_FLOOR (304) 97
    TK_CEIL (305) 98
    TK_INTEGER (306) 16 64
    TK_LEQ (307) 59
    TK_GEQ (308) 60
    TK_EQU (309) 17 40 41 57 58 66 74
    TK_ASSIGN (310)
    TK_CHI (311) 99
    TK_BEGIN (312)
    TK_END (313) 32 46 47 57
    TK_FOR (314) 57
    TK_FROM (315)
    TK_TO (316)
    TK_RETURN (317) 32
    TK_CTRS (318) 46 47
    TK_MINIMIZE (319) 43
    TK_IN (320) 18 23 24 63
    TK_INT (321) 15
    TK_UNION (322)
    TK_INTERSEC (323)


Nonterminals, with rules where they appear

    $accept (84)
        on left: 0
    program (85)
        on left: 2 4
        on right: 0
    $@1 (86)
        on left: 1
        on right: 2
    $@2 (87)
        on left: 3
        on right: 4
    system_or_func (88)
        on left: 5 6
        on right: 2
    choco_ctr (89)
        on left: 7
        on right: 4
    decl_opt_cst (90)
        on left: 8 9 10
        on right: 2
    decl_cst_list (91)
        on left: 11 12
        on right: 10 12
    decl_cst (92)
        on left: 13 14
        on right: 11 12
    decl_var_integer (93)
        on left: 15 16
        on right: 24
    equ_or_in (94)
        on left: 17 18
        on right: 13 14
    decl_var_list (95)
        on left: 19 20 21
        on right: 5 20 21
    decl_var (96)
        on left: 22 23 24
        on right: 19 20 21
    dimension <dim> (97)
        on left: 25 26 27
        on right: 13 14 22 23 24 37
    interval <itv> (98)
        on left: 28
        on right: 119
    decl_opt_fncs (99)
        on left: 29 30
        on right: 2 5 29
    function (100)
        on left: 32
        on right: 29
    $@3 (101)
        on left: 31
        on right: 32
    semicolon_opt (102)
        on left: 33 34
        on right: 32 43 47 48 49 51 54
    fnc_inpt_list (103)
        on left: 35 36
        on right: 32 35
    fnc_input (104)
        on left: 37
        on right: 35 36
    fnc_code (105)
        on left: 38 39
        on right: 32 38
    fnc_assign (106)
        on left: 40 41
        on right: 38
    decl_opt_goal (107)
        on left: 42 43
        on right: 5
    decl_opt_ctrs (108)
        on left: 44 46 47
        on right: 5
    $@4 (109)
        on left: 45
        on right: 46
    ctr_blk_list <constraints> (110)
        on left: 48 49
        on right: 7 46 57
    ctr_blk_list1 <constraints> (111)
        on left: 50 51 52
        on right: 48 50 53
    ctr_blk_list2 <constraints> (112)
        on left: 53 54 55
        on right: 49 51 54
    ctr_loop <constraint> (113)
        on left: 57
        on right: 53 54 55
    $@5 (114)
        on left: 56
        on right: 57
    ctr <constraint> (115)
        on left: 58 59 60 61 62 63 64 65 66
        on right: 50 51 52 65
    expr <expression> (116)
        on left: 67 68 69 70 71 72 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106 107 108 109 110 111 112 113 114 115 116 117 118 119 120 121 122 123 124 125
        on right: 13 14 23 24 26 27 28 32 40 41 43 57 58 59 60 61 62 63 64 66 67 68 69 70 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106 113 120 121 122 124 125 126 127 128 129 131 132
    $@6 (117)
        on left: 73
        on right: 74
    expr_row <expressions> (118)
        on left: 126 127
        on right: 71 72 107 114 123 126
    expr_col <expressions> (119)
        on left: 128 129
        on right: 108 128
    expr_index <expression> (120)
        on left: 130 131 132
        on right: 104 105 106


State 0

    0 $accept: • program $end
    1 $@1: ε •  [$end, TK_CONST, TK_VARS, TK_FUNCTION]
    2 program: • $@1 decl_opt_cst decl_opt_fncs system_or_func
    3 $@2: ε •  [TK_CONSTANT, TK_NEW_SYMBOL, TK_FUNC_SYMBOL, TK_EXPR_TMP_SYMBOL, TK_ENTITY, TK_ITERATOR, TK_UNARY_OP, TK_BINARY_OP, TK_INT_CST, TK_FLOAT, TK_PI, TK_INFINITY, TK_DIFF, TK_MIN, TK_MAX, TK_INF, TK_MID, TK_SUP, TK_SIGN, TK_ABS, TK_SUM, TK_SQRT, TK_SQR, TK_POW, TK_EXPO, TK_LOG, TK_COS, TK_SIN, TK_TAN, TK_ACOS, TK_ASIN, TK_ATAN, TK_ATAN2, TK_COSH, TK_SINH, TK_TANH, TK_ACOSH, TK_ASINH, TK_ATANH, TK_FLOOR, TK_CEIL, TK_INTEGER, TK_CHI, TK_FOR, '<', '+', '-', '[', '(']
    4 program: • $@2 choco_ctr

    $end         reduce using rule 1 ($@1)
    TK_CONST     reduce using rule 1 ($@1)
    TK_VARS      reduce using rule 1 ($@1)
    TK_FUNCTION  reduce using rule 1 ($@1)
    $default     reduce using rule 3 ($@2)

    program  go to state 1
    $@1      go to state 2
    $@2      go to state 3


State 1

    0 $accept: program • $end

    $end  shift, and go to state 4


State 2

    2 program: $@1 • decl_opt_cst decl_opt_fncs system_or_func
    8 decl_opt_cst: ε •  [$end, TK_VARS, TK_FUNCTION]
    9             | • TK_CONST
   10             | • TK_CONST decl_cst_list ';'

    TK_CONST  shift, and go to state 5

    $default  reduce using rule 8 (decl_opt_cst)

    decl_opt_cst  go to state 6


State 3

    4 program: $@2 • choco_ctr
    7 choco_ctr: • ctr_blk_list
   28 interval: • '[' expr ',' expr ']'
   48 ctr_blk_list: • ctr_blk_list1 semicolon_opt
   49             | • ctr_blk_list2 semicolon_opt
   50 ctr_blk_list1: • ctr_blk_list1 ';' ctr
   51              | • ctr_blk_list2 semicolon_opt ctr
   52              | • ctr
   53 ctr_blk_list2: • ctr_blk_list1 ';' ctr_loop
   54              | • ctr_blk_list2 semicolon_opt ctr_loop
   55              | • ctr_loop
   57 ctr_loop: • TK_FOR TK_NEW_SYMBOL TK_EQU expr ':' expr ';' $@5 ctr_blk_list TK_END
   58 ctr: • expr TK_EQU expr
   59    | • expr TK_LEQ expr
   60    | • expr TK_GEQ expr
   61    | • expr '<' expr
   62    | • expr '>' expr
   63    | • expr TK_IN expr
   64    | • TK_INTEGER '(' expr ')'
   65    | • '(' ctr ')'
   66    | • TK_NEW_SYMBOL TK_EQU expr
   67 expr: • expr '+' expr
   68     | • expr '*' expr
   69     | • expr '-' expr
   70     | • expr '/' expr
   71     | • TK_MAX '(' expr_row ')'
   72     | • TK_MIN '(' expr_row ')'
   74     | • TK_SUM '(' TK_NEW_SYMBOL TK_EQU expr ':' expr ',' $@6 expr ')'
   75     | • TK_ATAN2 '(' expr ',' expr ')'
   76     | • '-' expr
   77     | • TK_ABS '(' expr ')'
   78     | • TK_SIGN '(' expr ')'
   79     | • expr '\''
   80     | • TK_SQRT '(' expr ')'
   81     | • TK_SQR '(' expr ')'
   82     | • TK_POW '(' expr ',' expr ')'
   83     | • TK_EXPO '(' expr ')'
   84     | • TK_LOG '(' expr ')'
   85     | • TK_COS '(' expr ')'
   86     | • TK_SIN '(' expr ')'
   87     | • TK_TAN '(' expr ')'
   88     | • TK_ACOS '(' expr ')'
   89     | • TK_ASIN '(' expr ')'
   90     | • TK_ATAN '(' expr ')'
   91     | • TK_COSH '(' expr ')'
   92     | • TK_SINH '(' expr ')'
   93     | • TK_TANH '(' expr ')'
   94     | • TK_ACOSH '(' expr ')'
   95     | • TK_ASINH '(' expr ')'
   96     | • TK_ATANH '(' expr ')'
   97     | • TK_FLOOR '(' expr ')'
   98     | • TK_CEIL '(' expr ')'
   99     | • TK_CHI '(' expr ',' expr ',' expr ')'
  100     | • '+' expr
  101     | • '(' expr ')'
  102     | • '<' expr ',' expr '>'
  103     | • expr '^' expr
  104     | • expr '[' expr_index ']'
  105     | • expr '(' expr_index ')'
  106     | • expr '(' expr_index ',' expr_index ')'
  107     | • '(' expr_row ')'
  108     | • '(' expr_col ')'
  109     | • TK_ENTITY
  110     | • TK_ITERATOR
  111     | • TK_EXPR_TMP_SYMBOL
  112     | • TK_CONSTANT
  113     | • TK_FUNC_SYMBOL '(' expr ')'
  114     | • TK_FUNC_SYMBOL '(' expr_row ')'
  115     | • TK_FLOAT
  116     | • TK_PI
  117     | • TK_INFINITY
  118     | • TK_INT_CST
  119     | • interval
  120     | • TK_INF '(' expr ')'
  121     | • TK_MID '(' expr ')'
  122     | • TK_SUP '(' expr ')'
  123     | • TK_DIFF '(' expr_row ')'
  124     | • TK_UNARY_OP '(' expr ')'
  125     | • TK_BINARY_OP '(' expr ',' expr ')'

    TK_CONSTANT         shift, and go to state 7
    TK_NEW_SYMBOL       shift, and go to state 8
    TK_FUNC_SYMBOL      shift, and go to state 9
    TK_EXPR_TMP_SYMBOL  shift, and go to state 10
    TK_ENTITY           shift, and go to state 11
    TK_ITERATOR         shift, and go to state 12
    TK_UNARY_OP         shift, and go to state 13
    TK_BINARY_OP        shift, and go to state 14
    TK_INT_CST          shift, and go to state 15
    TK_FLOAT            shift, and go to state 16
    TK_PI               shift, and go to state 17
    TK_INFINITY         shift, and go to state 18
    TK_DIFF             shift, and go to state 19
    TK_MIN              shift, and go to state 20
    TK_MAX              shift, and go to state 21
    TK_INF              shift, and go to state 22
    TK_MID              shift, and go to state 23
    TK_SUP              shift, and go to state 24
    TK_SIGN             shift, and go to state 25
    TK_ABS              shift, and go to state 26
    TK_SUM              shift, and go to state 27
    TK_SQRT             shift, and go to state 28
    TK_SQR              shift, and go to state 29
    TK_POW              shift, and go to state 30
    TK_EXPO             shift, and go to state 31
    TK_LOG              shift, and go to state 32
    TK_COS              shift, and go to state 33
    TK_SIN              shift, and go to state 34
    TK_TAN              shift, and go to state 35
    TK_ACOS             shift, and go to state 36
    TK_ASIN             shift, and go to state 37
    TK_ATAN             shift, and go to state 38
    TK_ATAN2            shift, and go to state 39
    TK_COSH             shift, and go to state 40
    TK_SINH             shift, and go to state 41
    TK_TANH             shift, and go to state 42
    TK_ACOSH            shift, and go to state 43
    TK_ASINH            shift, and go to state 44
    TK_ATANH            shift, and go to state 45
    TK_FLOOR            shift, and go to state 46
    TK_CEIL             shift, and go to state 47
    TK_INTEGER          shift, and go to state 48
    TK_CHI              shift, and go to state 49
    TK_FOR              shift, and go to state 50
    '<'                 shift, and go to state 51
    '+'                 shift, and go to state 52
    '-'                 shift, and go to state 53
    '['                 shift, and go to state 54
    '('                 shift, and go to state 55

    choco_ctr      go to state 56
    interval       go to state 57
    ctr_blk_list   go to state 58
    ctr_blk_list1  go to state 59
    ctr_blk_list2  go to state 60
    ctr_loop       go to state 61
    ctr            go to state 62
    expr           go to state 63


State 4

    0 $accept: program $end •

    $default  accept


State 5

    9 decl_opt_cst: TK_CONST •  [$end, TK_VARS, TK_FUNCTION]
   10             | TK_CONST • decl_cst_list ';'
   11 decl_cst_list: • decl_cst
   12              | • decl_cst_list ';' decl_cst
   13 decl_cst: • TK_NEW_SYMBOL dimension equ_or_in expr
   14         | • '*' TK_NEW_SYMBOL dimension equ_or_in expr

    TK_NEW_SYMBOL  shift, and go to state 64
    '*'            shift, and go to state 65

    $default  reduce using rule 9 (decl_opt_cst)

    decl_cst_list  go to state 66
    decl_cst       go to state 67


State 6

    2 program: $@1 decl_opt_cst • decl_opt_fncs system_or_func
   29 decl_opt_fncs: • decl_opt_fncs function
   30              | ε •

    $default  reduce using rule 30 (decl_opt_fncs)

    decl_opt_fncs  go to state 68


State 7

  112 expr: TK_CONSTANT •

    $default  reduce using rule 112 (expr)


State 8

   66 ctr: TK_NEW_SYMBOL • TK_EQU expr

    TK_EQU  shift, and go to state 69


State 9

  113 expr: TK_FUNC_SYMBOL • '(' expr ')'
  114     | TK_FUNC_SYMBOL • '(' expr_row ')'

    '('  shift, and go to state 70


State 10

  111 expr: TK_EXPR_TMP_SYMBOL •

    $default  reduce using rule 111 (expr)


State 11

  109 expr: TK_ENTITY •

    $default  reduce using rule 109 (expr)


State 12

  110 expr: TK_ITERATOR •

    $default  reduce using rule 110 (expr)


State 13

  124 expr: TK_UNARY_OP • '(' expr ')'

    '('  shift, and go to state 71


State 14

  125 expr: TK_BINARY_OP • '(' expr ',' expr ')'

    '('  shift, and go to state 72


State 15

  118 expr: TK_INT_CST •

    $default  reduce using rule 118 (expr)


State 16

  115 expr: TK_FLOAT •

    $default  reduce using rule 115 (expr)


State 17

  116 expr: TK_PI •

    $default  reduce using rule 116 (expr)


State 18

  117 expr: TK_INFINITY •

    $default  reduce using rule 117 (expr)


State 19

  123 expr: TK_DIFF • '(' expr_row ')'

    '('  shift, and go to state 73


State 20

   72 expr: TK_MIN • '(' expr_row ')'

    '('  shift, and go to state 74


State 21

   71 expr: TK_MAX • '(' expr_row ')'

    '('  shift, and go to state 75


State 22

  120 expr: TK_INF • '(' expr ')'

    '('  shift, and go to state 76


State 23

  121 expr: TK_MID • '(' expr ')'

    '('  shift, and go to state 77


State 24

  122 expr: TK_SUP • '(' expr ')'

    '('  shift, and go to state 78


State 25

   78 expr: TK_SIGN • '(' expr ')'

    '('  shift, and go to state 79


State 26

   77 expr: TK_ABS • '(' expr ')'

    '('  shift, and go to state 80


State 27

   74 expr: TK_SUM • '(' TK_NEW_SYMBOL TK_EQU expr ':' expr ',' $@6 expr ')'

    '('  shift, and go to state 81


State 28

   80 expr: TK_SQRT • '(' expr ')'

    '('  shift, and go to state 82


State 29

   81 expr: TK_SQR • '(' expr ')'

    '('  shift, and go to state 83


State 30

   82 expr: TK_POW • '(' expr ',' expr ')'

    '('  shift, and go to state 84


State 31

   83 expr: TK_EXPO • '(' expr ')'

    '('  shift, and go to state 85


State 32

   84 expr: TK_LOG • '(' expr ')'

    '('  shift, and go to state 86


State 33

   85 expr: TK_COS • '(' expr ')'

    '('  shift, and go to state 87


State 34

   86 expr: TK_SIN • '(' expr ')'

    '('  shift, and go to state 88


State 35

   87 expr: TK_TAN • '(' expr ')'

    '('  shift, and go to state 89


State 36

   88 expr: TK_ACOS • '(' expr ')'

    '('  shift, and go to state 90


State 37

   89 expr: TK_ASIN • '(' expr ')'

    '('  shift, and go to state 91


State 38

   90 expr: TK_ATAN • '(' expr ')'

    '('  shift, and go to state 92


State 39

   75 expr: TK_ATAN2 • '(' expr ',' expr ')'

    '('  shift, and go to state 93


State 40

   91 expr: TK_COSH • '(' expr ')'

    '('  shift, and go to state 94


State 41

   92 expr: TK_SINH • '(' expr ')'

    '('  shift, and go to state 95


State 42

   93 expr: TK_TANH • '(' expr ')'

    '('  shift, and go to state 96


State 43

   94 expr: TK_ACOSH • '(' expr ')'

    '('  shift, and go to state 97


State 44

   95 expr: TK_ASINH • '(' expr ')'

    '('  shift, and go to state 98


State 45

   96 expr: TK_ATANH • '(' expr ')'

    '('  shift, and go to state 99


State 46

   97 expr: TK_FLOOR • '(' expr ')'

    '('  shift, and go to state 100


State 47

   98 expr: TK_CEIL • '(' expr ')'

    '('  shift, and go to state 101


State 48

   64 ctr: TK_INTEGER • '(' expr ')'

    '('  shift, and go to state 102


State 49

   99 expr: TK_CHI • '(' expr ',' expr ',' expr ')'

    '('  shift, and go to state 103


State 50

   57 ctr_loop: TK_FOR • TK_NEW_SYMBOL TK_EQU expr ':' expr ';' $@5 ctr_blk_list TK_END

    TK_NEW_SYMBOL  shift, and go to state 104


State 51

   28 interval: • '[' expr ',' expr ']'
   67 expr: • expr '+' expr
   68     | • expr '*' expr
   69     | • expr '-' expr
   70     | • expr '/' expr
   71     | • TK_MAX '(' expr_row ')'
   72     | • TK_MIN '(' expr_row ')'
   74     | • TK_SUM '(' TK_NEW_SYMBOL TK_EQU expr ':' expr ',' $@6 expr ')'
   75     | • TK_ATAN2 '(' expr ',' expr ')'
   76     | • '-' expr
   77     | • TK_ABS '(' expr ')'
   78     | • TK_SIGN '(' expr ')'
   79     | • expr '\''
   80     | • TK_SQRT '(' expr ')'
   81     | • TK_SQR '(' expr ')'
   82     | • TK_POW '(' expr ',' expr ')'
   83     | • TK_EXPO '(' expr ')'
   84     | • TK_LOG '(' expr ')'
   85     | • TK_COS '(' expr ')'
   86     | • TK_SIN '(' expr ')'
   87     | • TK_TAN '(' expr ')'
   88     | • TK_ACOS '(' expr ')'
   89     | • TK_ASIN '(' expr ')'
   90     | • TK_ATAN '(' expr ')'
   91     | • TK_COSH '(' expr ')'
   92     | • TK_SINH '(' expr ')'
   93     | • TK_TANH '(' expr ')'
   94     | • TK_ACOSH '(' expr ')'
   95     | • TK_ASINH '(' expr ')'
   96     | • TK_ATANH '(' expr ')'
   97     | • TK_FLOOR '(' expr ')'
   98     | • TK_CEIL '(' expr ')'
   99     | • TK_CHI '(' expr ',' expr ',' expr ')'
  100     | • '+' expr
  101     | • '(' expr ')'
  102     | • '<' expr ',' expr '>'
  102     | '<' • expr ',' expr '>'
  103     | • expr '^' expr
  104     | • expr '[' expr_index ']'
  105     | • expr '(' expr_index ')'
  106     | • expr '(' expr_index ',' expr_index ')'
  107     | • '(' expr_row ')'
  108     | • '(' expr_col ')'
  109     | • TK_ENTITY
  110     | • TK_ITERATOR
  111     | • TK_EXPR_TMP_SYMBOL
  112     | • TK_CONSTANT
  113     | • TK_FUNC_SYMBOL '(' expr ')'
  114     | • TK_FUNC_SYMBOL '(' expr_row ')'
  115     | • TK_FLOAT
  116     | • TK_PI
  117     | • TK_INFINITY
  118     | • TK_INT_CST
  119     | • interval
  120     | • TK_INF '(' expr ')'
  121     | • TK_MID '(' expr ')'
  122     | • TK_SUP '(' expr ')'
  123     | • TK_DIFF '(' expr_row ')'
  124     | • TK_UNARY_OP '(' expr ')'
  125     | • TK_BINARY_OP '(' expr ',' expr ')'

    TK_CONSTANT         shift, and go to state 7
    TK_FUNC_SYMBOL      shift, and go to state 9
    TK_EXPR_TMP_SYMBOL  shift, and go to state 10
    TK_ENTITY           shift, and go to state 11
    TK_ITERATOR         shift, and go to state 12
    TK_UNARY_OP         shift, and go to state 13
    TK_BINARY_OP        shift, and go to state 14
    TK_INT_CST          shift, and go to state 15
    TK_FLOAT            shift, and go to state 16
    TK_PI               shift, and go to state 17
    TK_INFINITY         shift, and go to state 18
    TK_DIFF             shift, and go to state 19
    TK_MIN              shift, and go to state 20
    TK_MAX              shift, and go to state 21
    TK_INF              shift, and go to state 22
    TK_MID              shift, and go to state 23
    TK_SUP              shift, and go to state 24
    TK_SIGN             shift, and go to state 25
    TK_ABS              shift, and go to state 26
    TK_SUM              shift, and go to state 27
    TK_SQRT             shift, and go to state 28
    TK_SQR              shift, and go to state 29
    TK_POW              shift, and go to state 30
    TK_EXPO             shift, and go to state 31
    TK_LOG              shift, and go to state 32
    TK_COS              shift, and go to state 33
    TK_SIN              shift, and go to state 34
    TK_TAN              shift, and go to state 35
    TK_ACOS             shift, and go to state 36
    TK_ASIN             shift, and go to state 37
    TK_ATAN             shift, and go to state 38
    TK_ATAN2            shift, and go to state 39
    TK_COSH             shift, and go to state 40
    TK_SINH             shift, and go to state 41
    TK_TANH             shift, and go to state 42
    TK_ACOSH            shift, and go to state 43
    TK_ASINH            shift, and go to state 44
    TK_ATANH            shift, and go to state 45
    TK_FLOOR            shift, and go to state 46
    TK_CEIL             shift, and go to state 47
    TK_CHI              shift, and go to state 49
    '<'                 shift, and go to state 51
    '+'                 shift, and go to state 52
    '-'                 shift, and go to state 53
    '['                 shift, and go to state 54
    '('                 shift, and go to state 105

    interval  go to state 57
    expr      go to state 106


State 52

   28 interval: • '[' expr ',' expr ']'
   67 expr: • expr '+' expr
   68     | • expr '*' expr
   69     | • expr '-' expr
   70     | • expr '/' expr
   71     | • TK_MAX '(' expr_row ')'
   72     | • TK_MIN '(' expr_row ')'
   74     | • TK_SUM '(' TK_NEW_SYMBOL TK_EQU expr ':' expr ',' $@6 expr ')'
   75     | • TK_ATAN2 '(' expr ',' expr ')'
   76     | • '-' expr
   77     | • TK_ABS '(' expr ')'
   78     | • TK_SIGN '(' expr ')'
   79     | • expr '\''
   80     | • TK_SQRT '(' expr ')'
   81     | • TK_SQR '(' expr ')'
   82     | • TK_POW '(' expr ',' expr ')'
   83     | • TK_EXPO '(' expr ')'
   84     | • TK_LOG '(' expr ')'
   85     | • TK_COS '(' expr ')'
   86     | • TK_SIN '(' expr ')'
   87     | • TK_TAN '(' expr ')'
   88     | • TK_ACOS '(' expr ')'
   89     | • TK_ASIN '(' expr ')'
   90     | • TK_ATAN '(' expr ')'
   91     | • TK_COSH '(' expr ')'
   92     | • TK_SINH '(' expr ')'
   93     | • TK_TANH '(' expr ')'
   94     | • TK_ACOSH '(' expr ')'
   95     | • TK_ASINH '(' expr ')'
   96     | • TK_ATANH '(' expr ')'
   97     | • TK_FLOOR '(' expr ')'
   98     | • TK_CEIL '(' expr ')'
   99     | • TK_CHI '(' expr ',' expr ',' expr ')'
  100     | • '+' expr
  100     | '+' • expr
  101     | • '(' expr ')'
  102     | • '<' expr ',' expr '>'
  103     | • expr '^' expr
  104     | • expr '[' expr_index ']'
  105     | • expr '(' expr_index ')'
  106     | • expr '(' expr_index ',' expr_index ')'
  107     | • '(' expr_row ')'
  108     | • '(' expr_col ')'
  109     | • TK_ENTITY
  110     | • TK_ITERATOR
  111     | • TK_EXPR_TMP_SYMBOL
  112     | • TK_CONSTANT
  113     | • TK_FUNC_SYMBOL '(' expr ')'
  114     | • TK_FUNC_SYMBOL '(' expr_row ')'
  115     | • TK_FLOAT
  116     | • TK_PI
  117     | • TK_INFINITY
  118     | • TK_INT_CST
  119     | • interval
  120     | • TK_INF '(' expr ')'
  121     | • TK_MID '(' expr ')'
  122     | • TK_SUP '(' expr ')'
  123     | • TK_DIFF '(' expr_row ')'
  124     | • TK_UNARY_OP '(' expr ')'
  125     | • TK_BINARY_OP '(' expr ',' expr ')'
